# geo

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: 1 - installation.ipynb  2+ - distance.ipynb  3 - geodataframes.ipynb  6 - spatial_dashboards.ipynb  profile.html  spatial_dashboards.ipynb
notebooks/data/: all_london.geojson  gdf_borough_full_geo.geojson  london_boroughs.dbf  london_boroughs.shp  london_fast_delivery.xlsx  profile.html
project/: building_classification.ipynb  final_proj_description_plan.md  pool_profile.html
project/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
project/catboost_info/learn/: events.out.tfevents
project/data/: belgrade_pools_merged.csv  belgrade_pools_merged.geojson  belgrade_pools_merged.gpkg  belgrade_pools_osm.csv  belgrade_pools_osm.geojson  belgrade_pools_osm.gpkg  census-2022-population-by-area.csv  earnings-2025.csv  municipal_pools_wikipedia.json
project/profile_reports/: districts.html  joined_footprints.html  osm_buildings.html
