[project]
name = "geopython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2026.2.0",
    "alphashape>=1.3.1",
    "contextily>=1.7.0",
    "dask-geopandas>=0.1.3",
    "dask-labextension>=7.0.0",
    "datasets>=4.8.4",
    "exactextract>=0.3.0",
    "fiona>=1.10.1",
    "folium>=0.20.0",
    "geopandas>=0.11",
    "geopy>=2.4.1",
    "h3>=4.4.2",
    "jupyterlab>3",
    "libpysal>=4.14.1",
    "lightgbm>=4.6.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "overpy>=0.7",
    "pandas>=2.3.3",
    "planetary-computer>=1.0.0",
    "plotly==5.10.0",
    "pyarrow>=23.0.1",
    "pygeohash>=3.2.2",
    "pykrige>=1.7.3",
    "pyproj>=3.2",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
    "requests>=2.33.0",
    "requests-cache>=1.3.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
    "splot>=1.1.7",
    "statsmodels>=0.14.6",
    "tqdm>=4.67.3",
    "ydata-profiling>=4.18.1",
    "osmnx",
    "setuptools<70",
    "jupyter-resource-usage>=1.2.0",
    "rioxarray>=0.22.0",
    "xlrd>=2.0.2",
    "catboost>=1.2.10",
]
